fix flex wrap

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -41,6 +41,7 @@
                 display: flex;
                 align-items: center;
                 flex-direction: row;
+                flex-wrap: wrap;
             }
 
             .fc-toolbar-chunk {
